--- a/web/workspace/frontend/sass/parts/infographic.scss
+++ b/web/workspace/frontend/sass/parts/infographic.scss
@@ -271,6 +271,16 @@ height: 100%;
 	position: absolute;
 	color: #43595F;
 	width: 300px;
+	
+	a {
+		transition: 0.2s all;
+		transform: scale(1);
+		display: block;
+	}
+	a:hover {
+		color: #000;
+		transform: scale(1.03);
+	}
 }
 .explainer__blurb p {
 	margin: 8px 0 0;
@@ -279,7 +289,7 @@ height: 100%;
 }
 .explainer__blurb img {
 	float: left;
-	margin: 13px 17px 0 0;
+	margin: 4px 17px 0 0;
 }
 
 .b-api {
