--- a/web/workspace/pages/latest.dust
+++ b/web/workspace/pages/latest.dust
@@ -1,7 +1,7 @@
 {>"partials/header" /}
 
 {<header}
-<p class="inline-block hdr kilo read">Platform, innovation and industry insight.</p>
+<p class="inline-block hdr kilo read">News, platform releases and product roadmap updates.</p>
 <p class="normal txt--grey no-marg-i pad__bottom">From your friends at DADI.</p>
 {/header}
 
