--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -2142,24 +2142,27 @@ abbr {
   top: 4px;
   width: 20px; }
 .product__gallery {
-  width: 140%;
-  position: absolute;
-  left: -15%;
-  height: 0;
-  padding-top: 81.5%;
-  margin-top: -40px; }
+  position: relative;
+  z-index: 10;
+  padding-top: 81.5%; }
+@media handheld, only screen and (min-width: 50em) {
+    .product__gallery {
+      margin-top: -40px;
+      width: 140%;
+      position: absolute;
+      left: -10%;
+      height: 0; } }
 @media handheld, only screen and (max-width: 50em) {
     .product__gallery {
-      margin-top: 20px;
-      position: static; } }
+      margin-top: 20px; } }
 .product__frame {
-  background: #21262d;
-  border-radius: 6px;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  background: #21262d;
+  border-radius: 6px;
   overflow: hidden;
   box-shadow: -6px 6px 21px rgba(0, 0, 0, 0.16);
   -webkit-transform: translate3d(0, 0, 0);
@@ -2167,13 +2170,21 @@ abbr {
 .product__frame img {
   width: 100%;
   height: auto; }
-.product__visuals {
-  height: 460px;
-  position: relative;
-  top: -40px; }
-@media handheld, only screen and (max-width: 50em) {
-    .product__visuals {
-      height: auto; } }
+@media handheld, only screen and (min-width: 50em) {
+  .product__visuals {
+    height: 460px;
+    position: relative;
+    top: -40px; }
+  .product__workswith {
+    float: left;
+    width: 50%;
+    position: relative; }
+  .product__focus {
+    float: right;
+    width: 50%;
+    position: relative; }
+  .product__features {
+    padding-bottom: 100px; } }
 .list--products {
   padding: 0 0 60px; }
 @media handheld, only screen and (max-width: 50em) {
@@ -2212,7 +2223,6 @@ abbr {
     border-bottom-color: #000 !important; }
 .gallery div {
   display: block;
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -2220,6 +2230,7 @@ abbr {
   margin: auto;
   max-width: 100%;
   max-height: 100%;
+  position: absolute;
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.5s ease; }
