--- a/web/workspace/pages/partials/navigation.dust
+++ b/web/workspace/pages/partials/navigation.dust
@@ -21,14 +21,14 @@
           <option value="en">English</option>
         </optgroup>
         <optgroup label="Coming soon">
-          <option value="fr">Français</option>
-          <option value="de">Deutsche</option>
-          <option value="zh_hans">中文 (CN/SG)</option>
-          <option value="zh_hant">中文 (TW/HK)</option>
-          <option value="ru">Pусский</option>
-          <option value="es">Español</option>
-          <option value="pt">Português</option>
-          <option value="jp">日本語</option>
+          <option disabled value="fr">Français</option>
+          <option disabled value="de">Deutsche</option>
+          <option disabled value="zh_hans">中文 (CN/SG)</option>
+          <option disabled value="zh_hant">中文 (TW/HK)</option>
+          <option disabled value="ru">Pусский</option>
+          <option disabled value="es">Español</option>
+          <option disabled value="pt">Português</option>
+          <option disabled value="jp">日本語</option>
       </select>
     </li>
   </ul>
