--- a/web/workspace/pages/about.dust
+++ b/web/workspace/pages/about.dust
@@ -7,8 +7,8 @@
 <div class="container pad__bottom--x2">
   <div class="grid">
     <div class="col w-1-2">
-      <h2>From hybrid designer/developers to hyper-intelligent data scientists; from heavyweight project managers to heavy-lifting technologists: we only hire senior, talented team players with impressively hefty skill sets.</h2>
-      <p class="normal">But with high standards come hard choices. And in assembling the ideal team for our data-focussed agency, we've learnt a few things:</p>
+      <h2>From full-stack engineers and heavy-lifting technologists to expert product strategists and heavyweight project directors: we only hire senior, talented team players with impressive talent.</h2>
+      <p class="normal">But with high standards come hard choices. And in assembling the ideal team for our forward-thinking technology company, we've learnt a few things:</p>
       <div class="read">
       <ul class="list__line normal">
         <li>The best talent doesn't always live within an hour of central London</li>
