--- a/web/workspace/pages/about.dust
+++ b/web/workspace/pages/about.dust
@@ -16,7 +16,7 @@
         <li>Inspiration can strike at any time – we need the tools to record and deploy when it does</li>
       </ul>
       </div>
-      <p class="normal">Hence a <a href="/{params.lang}/how-we-work/">radical way of working for DADI</a>: a flexible attitude and unique approach to recruitment that make us quite the draw for great talent (even if we say so ourselves).</p>
+      <p class="normal">Hence a <a href="/{params.lang}/how-we-work/">radical way of working for DADI</a>: a flexible attitude and unique approach to recruitment that make us quite the draw for smart people (even if we say so ourselves).</p>
     </div>
     <div class="photos col w-1-2 marg__top pad__top--half" style="line-height:0">
       <p style="line-height:normal" class="small bg--black no-marg-i pad--half txt--white fwb delta">Our founders – Joseph Denne, Will Lebens &amp; Christopher Mair</p>
@@ -36,7 +36,7 @@
 <div class="container container--divider marg__top">
   <div class="grid">
     <div class="col w-1-2 documentation">
-      <p class="medium">Early on we realized that, to attract the best people, we had to be flexible. We had to look outside of London and trust our people to work however suits them.</p>
+      <p class="medium">To attract the best people we have to be flexible – and trust our people to work however suits them.</p>
       <p class="medium fwb">We think it makes DADI a pretty special place to work.</p>
     </div>
     <div class="col w-1-2">
