--- a/web/workspace/pages/partials/footer.dust
+++ b/web/workspace/pages/partials/footer.dust
@@ -5,12 +5,12 @@
     <div class="bdr__bottom bdr--bdr-grey marg__bottom--x2 pad__bottom">
       <div class="grid feed">
         <div class="col w-1-2">
-        <p class="normal"><strong>The Feed</strong> provides the latest news and releases from DADI along with a collection of the best industry news, resources and inspiration from around the web, curated by us.</p>
+        <p class="normal">{@i18n}<strong>The Feed</strong> provides the latest news and releases from DADI along with a collection of the best industry news, resources and inspiration from around the web, curated by us.{/i18n}</p>
         </div>
         <div class="col w-1-2 normal pad__top">
           <form action="https://dadi.createsend.com/t/d/s/irhyjh/" method="post">
-            <p class="no-marg-i pad--half txt--grey">Get <strong>The Feed</strong> in your inbox</p>
-            <input type="text" name="cm-irhyjh-irhyjh" class="email text" placeholder="Your email address"><button class="btn btn--blue" type="submit">Subscribe</button>
+            <p class="no-marg-i pad--half txt--grey">{@i18n}Get <strong>The Feed</strong> in your inbox{/i18n}</p>
+            <input type="text" name="cm-irhyjh-irhyjh" class="email text" placeholder="{@i18n}Your email address{/i18n}"><button class="btn btn--blue" type="submit">{@i18n}Subscribe{/i18n}</button>
           </form>
         </div>
       </div>
@@ -21,7 +21,7 @@
             <p class="hdr large txt--blue"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/">{attributes.title}</a></p>
             <p class="small txt--mid-grey">By <strong>{attributes.author}</strong></p>
             <p class="small">{@soberMarkdown}{@Truncate data="{attributes.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
-            <p class="small"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/" class="btn btn--blue">Read more</a></p>
+            <p class="small"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/" class="btn btn--blue">{@i18n}Learn more{/i18n}</a></p>
           </div>
         {/latest-footer.results}
       </div>
@@ -29,18 +29,18 @@
     <div class="grid">
       <div class="col w-1-3 pad__bottom">
         <ul class="list--line normal txt--blue">
-          <li><a href="/{params.lang}/contact/">Contact us</a></li>
-          <li><a href="/{params.lang}/about/">About &amp; Careers</a></li>
-          <li><a href="/{params.lang}/support/">Support</a></li>
-          <li><a href="/{params.lang}/latest/">Latest</a></li>
-          <li><a href="/{params.lang}/on-demand/" onclick="ga('send','event','On demand','Click','Footer');">On demand</a></li>
-          <li><a href="/{params.lang}/how-we-work/">How we work</a>
-          <li><a href="/{params.lang}/faq/">FAQ</a>
-          <li><a href="/{params.lang}/privacy/">Privacy</a></li>
+          <li><a href="/{params.lang}/contact/">{@i18n}Contact us{/i18n}</a></li>
+          <li><a href="/{params.lang}/about/">{@i18n}About &amp; Careers{/i18n}</a></li>
+          <li><a href="/{params.lang}/support/">{@i18n}Support{/i18n}</a></li>
+          <li><a href="/{params.lang}/latest/">{@i18n}Latest{/i18n}</a></li>
+          <li><a href="/{params.lang}/on-demand/" onclick="ga('send','event','On demand','Click','Footer');">{@i18n}On demand{/i18n}</a></li>
+          <li><a href="/{params.lang}/how-we-work/">{@i18n}How we work{/i18n}</a>
+          <li><a href="/{params.lang}/faq/">{@i18n}FAQ{/i18n}</a>
+          <li><a href="/{params.lang}/privacy/">{@i18n}Privacy{/i18n}</a></li>
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr"><a href="/{params.lang}/">Technology</a></p>
+        <p class="normal hdr"><a href="/{params.lang}/">{@i18n}Technology{/i18n}</a></p>
         <ul class="list--line">
           <li>
             <a href="/{params.lang}/api/" class="fwb">
@@ -93,17 +93,17 @@
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr">Learn</p>
+        <p class="normal hdr">{@i18n}Learn{/i18n}</p>
         <ul class="list--line">
-          <li><a href="/{params.lang}/concepts/">Concepts</a></li>
+          <li><a href="/{params.lang}/concepts/">{@i18n}Concepts{/i18n}</a></li>
           {! <li><a href="/{params.lang}/tools/">Tools &amp; Components</a></li> !}
-          <li><a href="/{params.lang}/security/">Security</a></li>
-          <li><a href="/{params.lang}/roadmap/">Roadmap</a></li>
+          <li><a href="/{params.lang}/security/">{@i18n}Security{/i18n}</a></li>
+          <li><a href="/{params.lang}/roadmap/">{@i18n}Roadmap{/i18n}</a></li>
           {! <li><a href="/{params.lang}/licensing/">Licensing</a></li> !}
           <li>
             <a href="http://docs.dadi.tech" onclick="ga('send','event','Documentation','Click','Footer');" rel="noopener">
             <img src="/assets/icons/pop-out.svg" class="alignv float--right" width="15">
-            Documentation
+            {@i18n}Documentation{/i18n}
             </a>
           </li>
         </ul>
@@ -113,9 +113,9 @@
     <div class="marg__top--x2 pad__top pad__bottom alignc">
       <ul class="list--inline block marg__bottom--x2">
         <li class="fwb">© DADI+ Ltd.</li>
-        <li><a href="https://twitter.com/dadi">Follow us on Twitter</a></li>
-        <li><a href="https://github.com/dadi" onclick="ga('send','event','Github','Click','Footer');">Find us on Github</a></li>
-        <li><a href="https://github.com/dadi/dadi.tech">View the repo for this site</a></li>
+        <li><a href="https://twitter.com/dadi">{@i18n}Follow us on Twitter{/i18n}</a></li>
+        <li><a href="https://github.com/dadi" onclick="ga('send','event','Github','Click','Footer');">{@i18n}Find us on Github{/i18n}</a></li>
+        <li><a href="https://github.com/dadi/dadi.tech">{@i18n}View the repo for this site{/i18n}</a></li>
       </ul>
       <img src="/assets/img/d.svg" class="marg__right--x2 alignv" width="45">
     </div>
