--- a/web/workspace/pages/partials/metatags.dust
+++ b/web/workspace/pages/partials/metatags.dust
@@ -22,7 +22,7 @@
 <meta name="twitter:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
 
 <meta name="geo.placename" content="London, UK">
-<meta name="dc.language" content="en">
+<meta name="dc.language" content="{params.lang}">
 <meta name="geo.country" content="gb">
 
 <meta name="google-site-verification" content="6HNzGapV7i7XnjwpD1-eB5MF5iNb9OLT6aqmlP8CCtY" />
