--- a/web/workspace/pages/partials/navigation.dust
+++ b/web/workspace/pages/partials/navigation.dust
@@ -11,18 +11,18 @@
     </li>    
   </ol>
   <ul>
-    <li><a href="https://github.com/dadi/" onclick="ga('send','event','Github','Click','Header');">Find us on Github</a>
+    <li><a href="https://github.com/dadi/" onclick="ga('send','event','Github','Click','Header');">{@i18n}Find us on Github{/i18n}</a>
     </li>
-    <li><a href="http://docs.dadi.tech" class="txt--blue" onclick="ga('send','event','Documentation','Click','Header');">Documentation</a>
+    <li><a href="http://docs.dadi.tech" class="txt--blue" onclick="ga('send','event','Documentation','Click','Header');">{@i18n}Documentation{/i18n}</a>
     </li>
     <li>
       <select id="lang">
         <optgroup label="Languages">
-          <option value="en">English</option>
+          <option value="en" {@eq key=params.lang value="en"}selected{/eq}>English</option>
+          <option value="de" {@eq key=params.lang value="de"}selected{/eq}>Deutsche</option>
         </optgroup>
         <optgroup label="Coming soon">
           <option disabled value="fr">Français</option>
-          <option disabled value="de">Deutsche</option>
           <option disabled value="zh_hans">中文 (CN/SG)</option>
           <option disabled value="zh_hant">中文 (TW/HK)</option>
           <option disabled value="ru">Pусский</option>
