--- a/web/workspace/pages/contact.dust
+++ b/web/workspace/pages/contact.dust
@@ -2,7 +2,7 @@
 
 {<title}Contact us{/title}
 
-{<header}<h1 class="txt--white kilo">Get in touch with the team.</h1>{/header}
+{<header}<h1 class="txt--white kilo">{@i18n}Get in touch with the team.{/i18n}</h1>{/header}
 
 <div class="container pad__bottom--x2">
   {?mailResult}<div class="fwb medium txt--white bg--blue pad marg__bottom--x2">{mailResult}</div>{/mailResult}
@@ -10,25 +10,25 @@
   <form action="/contact/" method="post" class="grid">
     <ul class="list--no-style col w-1-2">
       <li class="pad__bottom">
-        <label class="hdr" for="name">Name</label>
+        <label class="hdr" for="name">{@i18n}Name{/i18n}</label>
         <input autofocus id="name" name="name" placeholder="Your full name" class="normal" type="text">
       </li>
       <li class="pad__bottom">
-        <label class="hdr" for="email">Email</label>
+        <label class="hdr" for="email">{@i18n}Email{/i18n}</label>
         <input id="email" name="email" required placeholder="Your email address" class="normal" type="email">
       </li>
       <li class="pad__bottom">
-        <label class="hdr" for="phone">Phone</label>
+        <label class="hdr" for="phone">{@i18n}Phone{/i18n}</label>
         <input id="phone" name="phone" placeholder="Contact telephone number" class="normal" type="text">
       </li>
     </ul>
     <ul class="list--no-style col w-1-2">
       <li class="pad__bottom">
-        <label class="hdr" for="message">Message</label>
+        <label class="hdr" for="message">{@i18n}Message{/i18n}</label>
         <textarea style="min-height:166px" rows="5" id="message" name="message" required placeholder="What do you want to talk about?" class="normal" type="email"></textarea>
       </li>
       <li>
-        <button type="submit" class="btn btn--blue" style="border-radius:5px">Send message</button>
+        <button type="submit" class="btn btn--blue" style="border-radius:5px">{@i18n}Send message{/i18n}</button>
       </li>
     </ul>
   </form>
@@ -37,22 +37,22 @@
 <div class="container container--divider normal">
   <div class="grid">
     <div class="col w-1-4 read">
-      <h3>Client engagement</h3>
+      <h3>{@i18n}Client engagement{/i18n}</h3>
       <p><a href="mailto:makesomething@dadi.co">makesomething@dadi.co</a><br>
       +44 (0) 20 7205 2902</p>
     </div>
     <div class="col w-1-4 read">
-      <h3>Media enquiries</h3>
+      <h3>{@i18n}Media enquiries{/i18n}</h3>
       <p><a href="mailto:press@dadi.co">press@dadi.co</a><br>
     +44 (0) 20 7205 2901</p>
     </div>
     <div class="col w-1-4 read">
-      <h3>Careers</h3>
+      <h3>{@i18n}Careers{/i18n}</h3>
       <p><a href="mailto:joinus@dadi.co">joinus@dadi.co</a><br>
     +44 (0) 20 7205 2903</p>
     </div>
     <div class="col w-1-4 read">
-      <h3>Everything else</h3>
+      <h3>{@i18n}Everything else{/i18n}</h3>
       <p><a href="mailto:hello@dadi.tech">hello@dadi.tech</a><br>
       +44 (0) 20 7205 2900<br>
       <a href="https://twitter.com/dadi">@dadi</a></p>
