--- a/web/workspace/pages/security.dust
+++ b/web/workspace/pages/security.dust
@@ -9,57 +9,39 @@
 
 <div class="container container--divider">
   <div class="grid">
-    <div class="col w-1-2">
-      <p class="larger hdr txt--red marg__bottom">{@i18n}Secure Access{/i18n}</p>
-
-      <p class="medium">{@i18n}Out of the box, DADI access passwords are encrypted, salted and repeatedly hashed.{/i18n}</p>
-
-      <p class="normal">{@i18n}Industry standard authentication practices are fully supported, including SSL and 2-factor authentication.{/i18n}</p>
+    <div class="col w-1-2 normal">
+      <p class="larger hdr txt--red marg__bottom">{security.results[0].title}</p>
+      {@markdown}{security.results[0].body}{/markdown}
     </div>
-    <div class="col w-1-2">
-      <p class="larger hdr txt--red marg__bottom">{@i18n}Granular User Access Control{/i18n}</p>
-
-      <p class="medium">{@i18n}DADI provides administrators with complete control over who can see and who can modify every part of a product. DADI operates based on a system of extensible user roles and access permissions.{/i18n}</p>
-
-      <p class="normal">{@i18n}Administrators can create user roles and give them specific, limited permissions. For example, your editorial interfaces might need an author role that can create and update content, but not publish or delete it (permissions reserved for the editor role), while administrative settings are reserved for a separate role entirely. Authenticated users can be assigned any number of roles, and their permissions are cumulative. Menu links and features are automatically hidden from users who do not have appropriate access.{/i18n}</p>
-    </div> 
-  </div>
-</div>
-
-<div class="container container--divider">
-  <div class="grid">
-    <div class="col w-1-2">
-      <p class="larger hdr txt--red marg__bottom">{@i18n}Data Encryption{/i18n}</p>
-
-      <p class="medium">{@i18n}In high security applications, DADI can be configured for extremely strong data encryption.{/i18n}</p>
-
-      <p class="normal">{@i18n}When whole-database encryption is not desired, very high granularity is available to protect more specific information: user accounts, specific forms, and even the values of specific fields can be encrypted. The encryption system can be configured to pass the strictest PCI, HIPAA, and state privacy laws, including offsite encryption key management.{/i18n}</p>
-    </div>
-    <div class="col w-1-2">
-      <p class="larger hdr txt--red marg__bottom">{@i18n}Preventing XSS, CSRF, and other malicious data entry{/i18n}</p>
-
-      <p class="medium">{@i18n}DADI’s Events layer ensures that data is validated and scrubbed before entry into your data layer. The system tests all given data to ensure that it matches prescribed, expected formats and values.{/i18n}</p>
-
-      <p class="normal">{@i18n}Tokens are injected into front end forms as they are generated, to protect against potential CSRF attacks.{/i18n}</p>
-
-      <p class="normal">{@i18n}The complete separation of concerns within DADI enables every layer within your platform - Your API, templating system, editorial interfaces, tracking tools etc. - to perform and handle security checks appropriate to their concerns independently.{/i18n}</p>
+    <div class="col w-1-2 normal">
+      <p class="larger hdr txt--red marg__bottom">{security.results[1].title}</p>
+      {@markdown}{security.results[1].body}{/markdown}
     </div>
   </div>
 </div>
 
 <div class="container container--divider">
   <div class="grid">
-    <div class="col w-1-2">
-      <p class="larger hdr txt--red marg__bottom">{@i18n}Brute Force Detection{/i18n}</p>
-
-      <p class="normal">{@i18n}DADI protects against brute-force password attacks by limiting the number of login attempts from a single IP address and username over a predefined period of time.{/i18n}</p>
+    <div class="col w-1-2 normal">
+      <p class="larger hdr txt--red marg__bottom">{security.results[2].title}</p>
+      {@markdown}{security.results[2].body}{/markdown}
     </div>
-    <div class="col w-1-2">
-      <p class="larger hdr txt--red marg__bottom">{@i18n}Mitigating Denial of Service (DoS) Attacks{/i18n}</p>
+    <div class="col w-1-2 normal">
+      <p class="larger hdr txt--red marg__bottom">{security.results[3].title}</p>
+      {@markdown}{security.results[3].body}{/markdown}
+    </div>
+  </div>
+</div>
 
-      <p class="medium">{@i18n}DADI supports comprehensive caching in every layer of your platform. Shared caching support via Redis, local caching and client caching approaches are all available as part of the core application set.{/i18n}</p>
-
-      <p class="normal">{@i18n}This multi-layered cache architecture is extremely resistant to high volumes of traffic, and makes DADI the system of choice for some of the world’s highest-traffic properties.{/i18n}</p>
+<div class="container container--divider">
+  <div class="grid">
+    <div class="col w-1-2 normal">
+      <p class="larger hdr txt--red marg__bottom">{security.results[4].title}</p>
+      {@markdown}{security.results[4].body}{/markdown}
+    </div>
+    <div class="col w-1-2 normal">
+      <p class="larger hdr txt--red marg__bottom">{security.results[5].title}</p>
+      {@markdown}{security.results[5].body}{/markdown}
     </div>
   </div>
 </div>
