--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -1081,8 +1081,10 @@ nav ul li a.on {
     padding: 10px 0 0;
     margin-top: 10px; } }
 header {
-  padding-bottom: 40px;
+  padding-bottom: 20px;
   overflow: hidden; }
+header nav {
+  padding-bottom: 20px; }
 body.home header {
   padding-bottom: 20px;
   background: #f9f9f9;
