--- a/web/workspace/pages/concepts.dust
+++ b/web/workspace/pages/concepts.dust
@@ -4,11 +4,11 @@
   {?params.concept}
     {concepts.results[0].title} / 
   {/params.concept}
-  Platform concepts
+  {@i18n}Platform concepts{/i18n}
 {/title}
 
 {<header}
-<h1 class="txt--white kilo pad__top--x2 no-marg-i pad__bottom--half">{@i18n}Platform concepts{/i18n}</h1>
+<h1 class="txt--white kilo">{@i18n}Platform concepts{/i18n}</h1>
 <p class="cf no-marg-i inline-block normal read txt--grey pad__bottom">{@i18n}Explore the core principles behind our platform.{/i18n}</p>
 {/header}
 
